Use openai for inference - local ollama is miserably slow right now

--- a/kubernetes/apps/default/hoarder/app/externalsecret.yaml
+++ b/kubernetes/apps/default/hoarder/app/externalsecret.yaml
@@ -15,6 +15,9 @@ spec:
       data:
         NEXTAUTH_SECRET: "{{ .nextauth_secret }}"
         MEILI_MASTER_KEY: "{{ .meili_master_key }}"
+        OPENAI_API_KEY: "{{ .api_key }}"
   dataFrom:
     - extract:
         key: hoarder
+    - extract:
+        key: openai-api
