--- a/kubernetes/apps/default/hoarder/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hoarder/app/helmrelease.yaml
@@ -37,9 +37,10 @@ spec:
               NEXTAUTH_URL: "https://{{ .Release.Name }}.${SECRET_DOMAIN}"
               MEILI_ADDR: http://hoarder-meilisearch:7700
               BROWSER_WEB_URL: http://hoarder-chrome:9222
-              OLLAMA_BASE_URL: "ollama-backend.default.svc.cluster.local:11434"
-              INFERENCE_TEXT_MODEL: "mistral-nemo"
-              INFERENCE_IMAGE_MODEL: "llava"
+              #OLLAMA_BASE_URL: "ollama-backend.default.svc.cluster.local:11434"
+              #INFERENCE_TEXT_MODEL: "mistral-nemo"
+              #INFERENCE_IMAGE_MODEL: "llava"
+              INFERENCE_CONTEXT_LENGTH: 4096
             envFrom: &envFrom
               - secretRef:
                   name: hoarder-secret
