--- a/kubernetes/apps/default/librechat/app/externalsecret.yaml
+++ b/kubernetes/apps/default/librechat/app/externalsecret.yaml
@@ -4,6 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: librechat
+  namespace: default
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
