erp fix openapi->openai secret name

--- a/kubernetes/apps/default/librechat/app/externalsecret.yaml
+++ b/kubernetes/apps/default/librechat/app/externalsecret.yaml
@@ -63,11 +63,11 @@ spec:
     - extract:
         key: librechat
     - extract:
-        key: openapi-api
+        key: openai-api
       rewrite:
       - regexp:
           source: "(.*)"
-          target: "openapi_$1"
+          target: "openai_$1"
     - extract:
         key: anthropic-api
       rewrite:
