--- a/kubernetes/apps/default/librechat/app/externalsecret.yaml
+++ b/kubernetes/apps/default/librechat/app/externalsecret.yaml
@@ -15,10 +15,10 @@ spec:
       engineVersion: v2
       data:
         # LLM Keys
-        OPENAI_API_KEY: "{{ .openapi_api_key }}"
-        ASSISTANTS_API_KEY: "{{ .openapi_api_key }}"
-        SPEECH_API_KEY: "{{ .openapi_api_key }}"
-        DALLE_API_KEY: "{{ .openapi_api_key }}"
+        OPENAI_API_KEY: "{{ .openai_api_key }}"
+        ASSISTANTS_API_KEY: "{{ .openai_api_key }}"
+        SPEECH_API_KEY: "{{ .openai_api_key }}"
+        DALLE_API_KEY: "{{ .openai_api_key }}"
         ANTHROPIC_API_KEY: "{{ .anthropic_api_key }}"
         PERPLEXITY_API_KEY: "{{ .PERPLEXITY_API_KEY }}"
         GOOGLE_KEY: "{{ .gemini_api_key }}"
