enable vector extension

--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -18,6 +18,8 @@ spec:
     parameters:
       max_connections: "400"
       shared_buffers: 256MB
+    shared_preload_libraries:
+      - "vector.so"
   nodeMaintenanceWindow:
     inProgress: false
     reusePVC: true
