--- a/kubernetes/apps/default/librechat/app/configmap.yaml
+++ b/kubernetes/apps/default/librechat/app/configmap.yaml
@@ -4,132 +4,136 @@ kind: ConfigMap
 metadata:
   name: librechat-configmap
 data:
+  bookmarks.yaml: |
 
-  #==================================================#
-  #                      App                         #
-  #==================================================#
-  NO_INDEX: "true"
-  INDEX_HTML_CACHE_CONTROL: "no-cache, no-store, must-revalidate"
-  INDEX_HTML_PRAGMA: no-cache
-  INDEX_HTML_EXPIRES: "0"
-  #==================================================#
-  #                    Models                        #
-  #==================================================#
+    #==================================================#
+    #                      App                         #
+    #==================================================#
+    NO_INDEX: "true"
+    INDEX_HTML_CACHE_CONTROL: "no-cache, no-store, must-revalidate"
+    INDEX_HTML_PRAGMA: no-cache
+    INDEX_HTML_EXPIRES: "0"
+    #==================================================#
+    #                    Models                        #
+    #==================================================#
 
-  ENDPOINTS: openAI,google,anthropic,custom,agents,assistants,gptPlugins
+    ENDPOINTS: openAI,google,anthropic,custom,agents,assistants,gptPlugins
 
-  # GOOGLE_MODELS: gemini-2.0-flash-exp,gemini-1.5-pro-latest,gemini-1.5-flash-latest
-  # OPENAI_MODELS: chatgpt-4o-latest,gpt-4o,gpt-4o-mini,o1-preview,o1-mini
-  # ANTHROPIC_MODELS: claude-3-5-sonnet-20241022
+    # GOOGLE_MODELS: gemini-2.0-flash-exp,gemini-1.5-pro-latest,gemini-1.5-flash-latest
+    # OPENAI_MODELS: chatgpt-4o-latest,gpt-4o,gpt-4o-mini,o1-preview,o1-mini
+    # ANTHROPIC_MODELS: claude-3-5-sonnet-20241022
 
-  GOOGLE_SAFETY_SEXUALLY_EXPLICIT: BLOCK_ONLY_HIGH
-  GOOGLE_SAFETY_HATE_SPEECH: BLOCK_ONLY_HIGH
-  GOOGLE_SAFETY_HARASSMENT: BLOCK_ONLY_HIGH
-  GOOGLE_SAFETY_DANGEROUS_CONTENT: BLOCK_ONLY_HIGH
+    GOOGLE_SAFETY_SEXUALLY_EXPLICIT: BLOCK_ONLY_HIGH
+    GOOGLE_SAFETY_HATE_SPEECH: BLOCK_ONLY_HIGH
+    GOOGLE_SAFETY_HARASSMENT: BLOCK_ONLY_HIGH
+    GOOGLE_SAFETY_DANGEROUS_CONTENT: BLOCK_ONLY_HIGH
 
-  #=============#
-  # Permissions #
-  #=============#
-  UID: "568"
-  GID: "568"
+    #=============#
+    # Permissions #
+    #=============#
+    UID: "568"
+    GID: "568"
 
-  #==================================================#
-  #                      Search                      #
-  #==================================================#
-  SEARCH: "true"
-  MEILI_NO_ANALYTICS: "true"
+    #==================================================#
+    #                      Search                      #
+    #==================================================#
+    SEARCH: "true"
+    MEILI_NO_ANALYTICS: "true"
 
-  MEILI_HOST: "http://librechat-meilisearch:7700"
+    MEILI_HOST: "http://librechat-meilisearch:7700"
 
-  #==================================================#
-  #                      RAG                         #
-  #==================================================#
-  RAG_PORT: "8000"
-  RAG_API_URL: "http://librechat-ragapi:8000"
+    #==================================================#
+    #                      RAG                         #
+    #==================================================#
+    RAG_PORT: "8000"
+    RAG_API_URL: "http://librechat-ragapi:8000"
 
-  RAG_USE_FULL_CONTEXT: "true"
-
-
-  #============#
-  # Plugins    #
-  #============#
-
-  DEBUG_PLUGINS: "true"
-
-  #========================#
-  # Moderation             #
-  #========================#
-
-  OPENAI_MODERATION: "false"
-  # OPENAI_MODERATION_REVERSE_PROXY=
-
-  BAN_VIOLATIONS: "false"
-  BAN_DURATION: 1000 * 60 * 60 * 2
-  BAN_INTERVAL: "20"
-
-  LOGIN_VIOLATION_SCORE: "1"
-  REGISTRATION_VIOLATION_SCORE: "1"
-  CONCURRENT_VIOLATION_SCORE: "1"
-  MESSAGE_VIOLATION_SCORE: "1"
-  NON_BROWSER_VIOLATION_SCORE: "20"
-  ILLEGAL_MODEL_REQ_SCORE: "5"
-
-  LIMIT_CONCURRENT_MESSAGES: "true"
-  CONCURRENT_MESSAGE_MAX: "2"
-
-  LIMIT_MESSAGE_IP: "true"
-  MESSAGE_IP_MAX: "40"
-  MESSAGE_IP_WINDOW: "1"
-
-  LIMIT_MESSAGE_USER: "false"
-  MESSAGE_USER_MAX: "40"
-  MESSAGE_USER_WINDOW: "1"
+    RAG_USE_FULL_CONTEXT: "true"
 
 
+    #============#
+    # Plugins    #
+    #============#
 
-  #========================#
-  # Balance                #
-  #========================#
+    DEBUG_PLUGINS: "true"
 
-  CHECK_BALANCE: "false"
+    #========================#
+    # Moderation             #
+    #========================#
 
-  #========================#
-  # Registration and Login #
-  #========================#
+    OPENAI_MODERATION: "false"
+    # OPENAI_MODERATION_REVERSE_PROXY=
 
-  ALLOW_EMAIL_LOGIN: "true"
-  ALLOW_REGISTRATION: "true"
-  ALLOW_SOCIAL_LOGIN: "false"
-  ALLOW_SOCIAL_REGISTRATION: "false"
-  ALLOW_PASSWORD_RESET: "false"
-  ALLOW_ACCOUNT_DELETION: "true" # note: enabled by default if omitted/commented out
-  ALLOW_UNVERIFIED_EMAIL_LOGIN: "true"
+    BAN_VIOLATIONS: "false"
+    BAN_DURATION: 1000 * 60 * 60 * 2
+    BAN_INTERVAL: "20"
 
-  SESSION_EXPIRY: 1000 * 60 * 15
-  REFRESH_TOKEN_EXPIRY: (1000 * 60 * 60 * 24) * 7
+    LOGIN_VIOLATION_SCORE: "1"
+    REGISTRATION_VIOLATION_SCORE: "1"
+    CONCURRENT_VIOLATION_SCORE: "1"
+    MESSAGE_VIOLATION_SCORE: "1"
+    NON_BROWSER_VIOLATION_SCORE: "20"
+    ILLEGAL_MODEL_REQ_SCORE: "5"
 
-  # EMAIL_HOST: smtp-relay.default.svc.cluster.local
-  # EMAIL_PORT: "25"
-  # EMAIL_FROM_NAME: "AI Chat"
-  # EMAIL_FROM: "librechat@${SECRET_DOMAIN}"
-  # EMAIL_USERNAME: "none"
-  # EMAIL_PASSWORD: "none"
+    LIMIT_CONCURRENT_MESSAGES: "true"
+    CONCURRENT_MESSAGE_MAX: "2"
+
+    LIMIT_MESSAGE_IP: "true"
+    MESSAGE_IP_MAX: "40"
+    MESSAGE_IP_WINDOW: "1"
+
+    LIMIT_MESSAGE_USER: "false"
+    MESSAGE_USER_MAX: "40"
+    MESSAGE_USER_WINDOW: "1"
 
 
-  #========================#
-  # Shared Links           #
-  #========================#
 
-  ALLOW_SHARED_LINKS: "true"
-  ALLOW_SHARED_LINKS_PUBLIC: "true"
+    #========================#
+    # Balance                #
+    #========================#
 
-  #===================================================#
-  #                        UI                         #
-  #===================================================#
+    CHECK_BALANCE: "false"
 
-  DOMAIN_CLIENT: "https://chat.${SECRET_DOMAIN}"
-  DOMAIN_SERVER: "https://chat.${SECRET_DOMAIN}"
+    #========================#
+    # Registration and Login #
+    #========================#
 
-  APP_TITLE: LibreChat
-  CUSTOM_FOOTER: "Atom Zone AI Chat"
-  HELP_AND_FAQ_URL: https://librechat.ai
+    ALLOW_EMAIL_LOGIN: "true"
+    ALLOW_REGISTRATION: "true"
+    ALLOW_SOCIAL_LOGIN: "false"
+    ALLOW_SOCIAL_REGISTRATION: "false"
+    ALLOW_PASSWORD_RESET: "false"
+    ALLOW_ACCOUNT_DELETION: "true" # note: enabled by default if omitted/commented out
+    ALLOW_UNVERIFIED_EMAIL_LOGIN: "true"
+
+    SESSION_EXPIRY: 1000 * 60 * 15
+    REFRESH_TOKEN_EXPIRY: (1000 * 60 * 60 * 24) * 7
+
+    # EMAIL_HOST: smtp-relay.default.svc.cluster.local
+    # EMAIL_PORT: "25"
+    # EMAIL_FROM_NAME: "AI Chat"
+    # EMAIL_FROM: "librechat@${SECRET_DOMAIN}"
+    # EMAIL_USERNAME: "none"
+    # EMAIL_PASSWORD: "none"
+
+
+    #========================#
+    # Shared Links           #
+    #========================#
+
+    ALLOW_SHARED_LINKS: "true"
+    ALLOW_SHARED_LINKS_PUBLIC: "true"
+
+    #===================================================#
+    #                        UI                         #
+    #===================================================#
+
+    DOMAIN_CLIENT: "https://chat.${SECRET_DOMAIN}"
+    DOMAIN_SERVER: "https://chat.${SECRET_DOMAIN}"
+
+    APP_TITLE: LibreChat
+    CUSTOM_FOOTER: "Atom Zone AI Chat"
+    HELP_AND_FAQ_URL: https://librechat.ai
+
+  librechat.sql: |
+    CREATE EXTENSION IF NOT EXISTS vector;
