--- a/kubernetes/apps/default/librechat/app/helmrelease.yaml
+++ b/kubernetes/apps/default/librechat/app/helmrelease.yaml
@@ -115,7 +115,7 @@ spec:
             image:
               repository: mongo
               tag: 7.0.15@sha256:8958f43a940142d2a4572bb4d4f147ab26994a3da1cead6d39876b96451a4f1a
-            command: ["mongod", "--noauth"]
+            command: ["mongod", "--noauth", "--bind_ip_all"]
             securityContext: *securityContext
             probes: *probes
 
