--- a/kubernetes/apps/default/librechat/app/resources/librechat.yaml
+++ b/kubernetes/apps/default/librechat/app/resources/librechat.yaml
@@ -10,10 +10,10 @@ cache: true
 # Custom interface configuration
 interface:
   endpointsMenu: true
-  modelSelect: true
-  parameters: true
+  modelSelect: false
+  parameters: false
   sidePanel: true
-  presets: false
+  presets: true
   prompts: true
   bookmarks: true
   multiConvo: false
@@ -64,6 +64,12 @@ fileConfig:
   endpoints:
     assistants:
       disabled: false
+      supportedMimeTypes:
+        - "application/json"
+        - "application/pdf"
+        - "application/xml"
+        - "text/.*"
+        - "image/.*"
     default:
       disabled: false
     openAI:
@@ -86,10 +92,13 @@ endpoints:
     disableBuilder: false
     pollIntervalMs: 3000
     timeoutMs: 180000
-
   agents:
     disableBuilder: false
-
+    capabilities:
+      # - "execute_code"
+      - "file_search"
+      - "actions"
+      - "tools"
   all:
     streamRate: 35 # Higher number 'buffers' incoming chunks to make the output smoother
 
@@ -202,6 +211,29 @@ modelSpecs:
           Claude is now being connected with a human.
 
 
+    - name: gpt-4o-mini
+      label: ChatGPT mini
+      description: Fast, affordable small model for focused tasks
+      iconURL: https://www.pngall.com/wp-content/uploads/15/ChatGPT-Logo-PNG-Cutout.png
+      showIconInMenu: true
+      showIconInHeader: true
+      default: true
+      preset:
+        endpoint: openAI
+        model: gpt-4o-mini
+        maxContextTokens: 128000 # Maximum context tokens
+        max_tokens: 16384 # Maximum output tokens
+        temperature: 0.7
+        modelLabel: ChatGPT mini
+        tools: ["dalle", "google", "web-browser", "calculator", "tavily_search_results_json", "traversaal_search"]
+        greeting: Hi, I'm ChatGPT! How can I help you today?
+        promptPrefix: |
+          You are ChatGPT, a large language model trained by OpenAI, based on the GPT-4 architecture.
+
+          Knowledge cutoff: 2023-10
+          Image input capabilities: Enabled
+          Personality: v2
+
     - name: gpt-4o
       label: ChatGPT
       description: ChatGPT is great for general conversation and answering questions
@@ -217,6 +249,7 @@ modelSpecs:
         temperature: 0.7
         modelLabel: ChatGPT
         greeting: Hi, I'm ChatGPT! How can I help you today?
+        tools: ["dalle", "google", "web-browser", "calculator", "tavily_search_results_json", "traversaal_search"]
         promptPrefix: |
           You are ChatGPT, a large language model trained by OpenAI, based on the GPT-4 architecture.
 
@@ -225,8 +258,8 @@ modelSpecs:
           Personality: v2
 
 
-    - name: o1
-      label: GPT-o1
+    - name: o1-mini
+      label: GPT-o1 mini
       description: GPT-o1 is good at performing complex reasoning. It's slower and more verbose than ChatGPT.
       iconURL: https://www.pngall.com/wp-content/uploads/15/ChatGPT-Logo-No-Background.png
       showIconInMenu: true
@@ -234,11 +267,12 @@ modelSpecs:
       default: false
       preset:
         endpoint: openAI
-        model: o1-preview
+        model: o1-mini
         maxContextTokens: 128000 # Maximum context tokens
         max_tokens: 32768 # Maximum output tokens
         temperature: 1
-        modelLabel: GPT-o1
+        tools: ["dalle", "google", "web-browser", "calculator", "tavily_search_results_json", "traversaal_search"]
+        modelLabel: GPT-o1 mini
         greeting: Ask me something complex!
 
 
@@ -255,13 +289,14 @@ modelSpecs:
         maxContextTokens: 1040000 # Maximum context tokens
         max_tokens: 8192
         temperature: 0.7
+        tools: ["dalle", "google", "web-browser", "calculator", "tavily_search_results_json", "traversaal_search"]
         modelLabel: "Gemini"
         greeting: "Gemini here, what can I do for you?"
 
-    # - name: "search agent"
-    #   label: "Search Agent"
-    #   description: "Search agent"
-    #   preset:
-    #     endpoint: agents
-    #     agent_id: agent_sGMmnLSMbLgcbL1CAWU9s
+    - name: "search agent"
+      label: "Search Agent"
+      description: "Search agent"
+      preset:
+        endpoint: agents
+        agent_id: agent_2ONHHWotl0se7xlZY7O6L
 
