--- a/kubernetes/apps/default/librechat/app/resources/librechat.yaml
+++ b/kubernetes/apps/default/librechat/app/resources/librechat.yaml
@@ -2,18 +2,18 @@
 # https://www.librechat.ai/docs/configuration/librechat_yaml
 
 # Configuration version (required)
-version: 1.1.8
+version: 1.2.0
 
 # Cache settings: Set to true to enable caching
 cache: true
 
 # Custom interface configuration
 interface:
-  endpointsMenu: true
+  endpointsMenu: false
   modelSelect: false
   parameters: false
   sidePanel: true
-  presets: true
+  presets: false
   prompts: true
   bookmarks: true
   multiConvo: false
