interface settings are for all users, too bad

--- a/kubernetes/apps/default/librechat/app/resources/librechat.yaml
+++ b/kubernetes/apps/default/librechat/app/resources/librechat.yaml
@@ -9,7 +9,7 @@ cache: true
 
 # Custom interface configuration
 interface:
-  endpointsMenu: false
+  endpointsMenu: true
   modelSelect: false
   parameters: false
   sidePanel: true
