Prepare for  multi-cluster

--- a/kubernetes/apps/default/bazarr/ks.yaml
+++ b/kubernetes/apps/default/bazarr/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/apps/default/bazarr/app
-  prune: true
+  prune: false # Should be set back to true after migration
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
