--- a/kubernetes/apps/default/plex/ks.yaml
+++ b/kubernetes/apps/default/plex/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: volsync
     - name: external-secrets-stores
   path: "./kubernetes/apps/default/plex/app"
-  prune: true
+  prune: false # Should be set back to true after migration
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
