--- a/kubernetes/apps/default/prowlarr/ks.yaml
+++ b/kubernetes/apps/default/prowlarr/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/apps/default/prowlarr/app
-  prune: true
+  prune: false # Should be set back to true after migration
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
