--- a/kubernetes/apps/default/readarr/ks.yaml
+++ b/kubernetes/apps/default/readarr/ks.yaml
@@ -14,7 +14,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  prune: true
+  prune: false # Should be set back to true after migration
   wait: false
   interval: 30m
   retryInterval: 1m
