--- a/kubernetes/apps/network/cloudflared/ks.yaml
+++ b/kubernetes/apps/network/cloudflared/ks.yaml
@@ -12,7 +12,7 @@ spec:
   dependsOn:
     - name: external-dns
   path: ./kubernetes/apps/network/cloudflared/app
-  prune: true
+  prune: false # Should be set back to true after migration
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
