--- a/kubernetes/moria/apps/default/librechat/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/librechat/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./configmap.yaml
-  - ../../../../templates/volsync
+  - ../../../../../templates/volsync
 configMapGenerator:
   - name: librechat-config
     files:
