--- a/kubernetes/moria/apps/default/valheim/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./configmap.yaml
   - ./helmrelease.yaml
   - ./pvc.yaml
-  - ../../../../templates/volsync
+  - ../../../../../templates/volsync
