Migrate flux to the cluster directory

--- a/kubernetes/moria/flux/config/flux.yaml
+++ b/kubernetes/moria/flux/config/flux.yaml
@@ -73,6 +73,9 @@ spec:
     # Enable in-memory-kustomize builds
     # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-in-memory-kustomize-builds
     - patch: |
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --concurrent=20
         - op: replace
           path: /spec/template/spec/volumes/0
           value:
@@ -82,6 +85,21 @@ spec:
       target:
         kind: Deployment
         name: kustomize-controller
+    # Enable Helm repositories caching
+    # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-helm-repositories-caching
+    - patch: |
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --helm-cache-max-size=10
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --helm-cache-ttl=60m
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --helm-cache-purge-interval=5m
+      target:
+        kind: Deployment
+        name: source-controller
     # Enable Helm near OOM detection
     # https://fluxcd.io/flux/cheatsheets/bootstrap/#enable-helm-near-oom-detection
     - patch: |
