--- a/kubernetes/moria/flux/config/cluster.yaml
+++ b/kubernetes/moria/flux/config/cluster.yaml
@@ -15,7 +15,23 @@ spec:
     # exclude all
     /*
     # include kubernetes directory
-    !/kubernetes
+    !/kubernetes/moria-ops
+    !/kubernetes/shared
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-shared
+  namespace: flux-system
+spec:
+  interval: 30m
+  path: ./kubernetes/shared
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -24,7 +40,9 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  path: ./kubernetes/flux
+  dependsOn:
+    - name: cluster-shared
+  path: ./kubernetes/moria/flux
   prune: true
   wait: false
   sourceRef:
