--- a/kubernetes/moria/flux/config/cluster.yaml
+++ b/kubernetes/moria/flux/config/cluster.yaml
@@ -15,8 +15,8 @@ spec:
     # exclude all
     /*
     # include kubernetes directory
-    !/kubernetes/moria-ops
-    !/kubernetes/shared
+    !/kubernetes/moria
+#    !/kubernetes/shared
 # ---
 # # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
