almost there, move templates to the shared folder and update everything

--- a/kubernetes/moria/apps/default/librechat/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/librechat/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./configmap.yaml
-  - ../../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
 configMapGenerator:
   - name: librechat-config
     files:
