--- a/kubernetes/moria/apps/default/bazarr/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/bazarr/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   #- ../../../../templates/gatus/guarded
-  - ../../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
 configMapGenerator:
   - name: bazarr-scripts
     files:
