--- a/kubernetes/moria/apps/default/tautulli/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/tautulli/app/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./pvc.yaml
   - ./helmrelease.yaml
   #- ../../../../templates/gatus/guarded
-  - ../../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
