--- a/kubernetes/moria/apps/network/netalertx/app/kustomization.yaml
+++ b/kubernetes/moria/apps/network/netalertx/app/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
-  - ../../../../../templates/volsync
+  - ../../../../../shared/templates/volsync
