--- a/kubernetes/moria/flux/config/cluster.yaml
+++ b/kubernetes/moria/flux/config/cluster.yaml
@@ -16,22 +16,22 @@ spec:
     /*
     # include kubernetes directory
     !/kubernetes/moria
-#    !/kubernetes/shared
-# ---
-# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: cluster-shared
-#   namespace: flux-system
-# spec:
-#   interval: 30m
-#   path: ./kubernetes/shared
-#   prune: true
-#   wait: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
+   !/kubernetes/shared
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-shared
+  namespace: flux-system
+spec:
+  interval: 30m
+  path: ./kubernetes/shared
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
