--- a/kubernetes/moria/apps/default/valheim/ks.yaml
+++ b/kubernetes/moria/apps/default/valheim/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: volsync
     - name: external-secrets-stores
   path: "./kubernetes/moria/apps/default/valheim/app"
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
