--- a/kubernetes/moria/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/moria/apps/cert-manager/cert-manager/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/moria/apps/cert-manager/cert-manager/app
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -32,7 +32,7 @@ spec:
   dependsOn:
     - name: cert-manager
   path: ./kubernetes/moria/apps/cert-manager/cert-manager/issuers
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
