--- a/kubernetes/moria/apps/default/librechat/ks.yaml
+++ b/kubernetes/moria/apps/default/librechat/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: cloudnative-pg
     - name: volsync
   path: ./kubernetes/moria/apps/default/librechat/app
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
