--- a/kubernetes/moria/apps/external-secrets/external-secrets/ks.yaml
+++ b/kubernetes/moria/apps/external-secrets/external-secrets/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/moria/apps/external-secrets/external-secrets/app
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -34,7 +34,7 @@ spec:
   dependsOn:
     - name: external-secrets
   path: ./kubernetes/moria/apps/external-secrets/external-secrets/stores
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
