--- a/kubernetes/moria/apps/kube-system/node-feature-discovery/ks.yaml
+++ b/kubernetes/moria/apps/kube-system/node-feature-discovery/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: "./kubernetes/moria/apps/kube-system/node-feature-discovery/app"
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -32,7 +32,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: "./kubernetes/moria/apps/kube-system/node-feature-discovery/rules"
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
