--- a/kubernetes/moria/apps/network/echo-server/ks.yaml
+++ b/kubernetes/moria/apps/network/echo-server/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   path: ./kubernetes/moria/apps/network/echo-server/app
-  prune: false # Should be set back to true after migration
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
