--- a/kubernetes/moria/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/moria/apps/rook-ceph/rook-ceph/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/moria/apps/rook-ceph/rook-ceph/app
-  prune: true # never should be deleted
+  prune: false # never should be deleted
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -36,7 +36,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/moria/apps/rook-ceph/rook-ceph/cluster
-  prune: true # never should be deleted
+  prune: false # never should be deleted
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
