--- a/kubernetes/moria/apps/storage/kustomization.yaml
+++ b/kubernetes/moria/apps/storage/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   # Flux-Kustomizations
   # - ./rook-ceph/ks.yaml
   # - ./snapshot-controller/ks.yaml
-  # - ./synology-csi/ks.yaml
+  - ./synology-csi/ks.yaml
   # - ./volsync/ks.yaml
