--- a/kubernetes/moria/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/moria/flux/vars/cluster-secrets.sops.yaml
@@ -10,6 +10,7 @@ stringData:
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:Uf8BuhyHTdG9gdU1ecq7xQzptQ/fgy8npi6YsWvU12qcEw==,iv:ma3p+aJs1G4Hkh/MO72xabbPm00x+8PuZp605Xd3qj4=,tag:T3GY3VCtCVtNU1L9lDhTkg==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:A+S/zfV7FS14ygRHVDTlwNsUqB8gH4pqj3k5QhSB+KNZYhk3,iv:rp7/sMjP63z7cddxEADj2JSshTwOs8/9tUiKBjLEvqM=,tag:EAc6TLACvZHhazNXHCZu9g==,type:str]
     SECRET_NFS_SERVER: ENC[AES256_GCM,data:J0VP8HrfPdBfKRkHScSVw8jpHbPFzCxjL1p4fVg=,iv:DJGmANbrenXc/AstrzOQWSyUjVqChMt0tULVtUdtF38=,tag:xh+mOpI+xNwjw/ELw68B8g==,type:str]
+    SECRET_DSM_IP: ENC[AES256_GCM,data:HkykZ+K2pfEj8RRQZQ==,iv:PW93YzjIc+ouTUYpaV1jBpiTnMRgI32gPRoY0/CNAaI=,tag:mumGHDZOVCghxIrn/vhkRg==,type:str]
     SECRET_LATITUDE: ENC[AES256_GCM,data:K1kx9+JUDKoKBw==,iv:TMDoDblFHFtCbPxDTTHj3TsrSJPlC4tSMdPORtU+S9g=,tag:r9Eg3Rac2DlKvETE7l83Jg==,type:str]
     SECRET_LONGITUDE: ENC[AES256_GCM,data:y67UvSLgN/RtowE=,iv:TjGEQaxQ9YeKvO7UWU6J/YwarPKgYXWjRiElKVftxlU=,tag:w719lO4jIEZeAm1dqdQNrA==,type:str]
 sops:
@@ -27,8 +28,8 @@ sops:
             SzVNazYrZGQ2RFdSMzJSTjI4b0VEd3cKnRl3+Sf2Wiq6/Wvs0Y9ckU/RfrpP6TB9
             iUAUUKSHM7erhHNYrPf+Zf/uWTzVAkyVeaVQAvDe3uB9WmDfUuL7hA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-29T02:54:36Z"
-    mac: ENC[AES256_GCM,data:u/fpgehD3a3pbtvyw49tAO3tuCPxsIwrv4uJaB2Y4DeZ5V3pCQGJuR6xuJbOmLKfc9LR6zjmtNK+ChvGge05zbLrB9nt1eyaQaxYN/SJWXaY5lc7AoQHjm4zybEPFkbFjgozTlRX+3ZWDMiZJhHuxv+DXWdRTvgudRYzA1XTVts=,iv:hYCBBtVFLnNMYhWzlwDbPqJ0TnVYZkyFTeJ6OAnlWGY=,tag:DdXwr2wCPOYQnJDC2D0xkQ==,type:str]
+    lastmodified: "2024-12-27T22:50:46Z"
+    mac: ENC[AES256_GCM,data:qo5idSM8GmBsjIlweP40P0BWStfHFEAfe8qOXYL3IKAdCb7e7W9GvjI2prh6fOTmHvAkxBp1apC8Ql9ooX58xhVxluDF068QY+Ao2fLCwu/OdON6i0SavcaKQfKXaUKX4vkNUt1Msb5cBosdO7nBvLetvkI7ca9vFygd7H16Q5U=,iv:G2Ubq2VLNScEBS7sZhd2WoFfv3uNxcAjnaCqY73/gZ8=,tag:Glre4DSjntzseKjaLCJWBw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
