--- a/kubernetes/moria/apps/default/plex/app/pvc.yaml
+++ b/kubernetes/moria/apps/default/plex/app/pvc.yaml
@@ -9,14 +9,14 @@ spec:
     requests:
       storage: 50Gi
   storageClassName: ceph-block
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: plex-cache-synology
-spec:
-  accessModes: ["ReadWriteOnce"]
-  resources:
-    requests:
-      storage: 50Gi
-  storageClassName: synology-iscsi-delete
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: plex-cache-synology
+# spec:
+#   accessModes: ["ReadWriteOnce"]
+#   resources:
+#     requests:
+#       storage: 50Gi
+#   storageClassName: synology-iscsi-delete
