--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -5,7 +5,7 @@ version: "3"
 vars:
   # Directories
   BOOTSTRAP_DIR: "{{.ROOT_DIR}}/bootstrap"
-  KUBERNETES_DIR: "{{.ROOT_DIR}}/kubernetes"
+  KUBERNETES_DIR: "{{.ROOT_DIR}}/kubernetes/moria"
   PRIVATE_DIR: "{{.ROOT_DIR}}/.private"
   SCRIPTS_DIR: "{{.ROOT_DIR}}/scripts"
   # Files
