--- a/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
@@ -130,10 +130,10 @@ spec:
         existingClaim: plex-cache
         globalMounts:
           - path: /config/Library/Application Support/Plex Media Server/Cache
-      # cache-synology:
-      #   existingClaim: plex-cache-synology
-      #   globalMounts:
-      #     - path: /config/Library/Application Support/Plex Media Server/Cache-synology
+      cache-syno:
+        existingClaim: plex-cache-syno
+        globalMounts:
+          - path: /config/Library/Application Support/Plex Media Server/Cache-syno
       logs:
         type: emptyDir
         globalMounts:
