--- a/kubernetes/moria/apps/default/plex/app/pvc.yaml
+++ b/kubernetes/moria/apps/default/plex/app/pvc.yaml
@@ -1,19 +1,19 @@
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: plex-cache
+# spec:
+#   accessModes: ["ReadWriteOnce"]
+#   resources:
+#     requests:
+#       storage: 50Gi
+#   storageClassName: ceph-block
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: plex-cache
-spec:
-  accessModes: ["ReadWriteOnce"]
-  resources:
-    requests:
-      storage: 50Gi
-  storageClassName: ceph-block
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: plex-cache-syno
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
