let's see if we can rename the claim now

--- a/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
@@ -127,7 +127,7 @@ spec:
         globalMounts:
           - path: /config/Library/Application Support/Plex Media Server
       cache:
-        existingClaim: plex-cache-syno
+        existingClaim: plex-cache
         globalMounts:
           - path: /config/Library/Application Support/Plex Media Server/Cache
       logs:
