--- a/kubernetes/moria/apps/default/plex/app/pvc.yaml
+++ b/kubernetes/moria/apps/default/plex/app/pvc.yaml
@@ -13,7 +13,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: plex-cache-syno
+  name: plex-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
