Migrate media stack to syno-csi

--- a/kubernetes/moria/apps/default/readarr/ks.yaml
+++ b/kubernetes/moria/apps/default/readarr/ks.yaml
@@ -23,3 +23,6 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 10Gi
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
