--- a/kubernetes/moria/apps/default/kavita/ks.yaml
+++ b/kubernetes/moria/apps/default/kavita/ks.yaml
@@ -25,3 +25,6 @@ spec:
     substitute:
       APP: kavita
       VOLSYNC_CAPACITY: 2Gi
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
