--- a/kubernetes/moria/apps/default/overseerr/ks.yaml
+++ b/kubernetes/moria/apps/default/overseerr/ks.yaml
@@ -25,3 +25,6 @@ spec:
       GATUS_SUBDOMAIN: requests
       GATUS_PATH: /api/v1/status
       VOLSYNC_CAPACITY: 5Gi
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
