--- a/kubernetes/moria/apps/default/plex/ks.yaml
+++ b/kubernetes/moria/apps/default/plex/ks.yaml
@@ -28,3 +28,6 @@ spec:
       APP: *app
       VOLSYNC_CAPACITY: 50Gi
       VOLSYNC_CACHE_CAPACITY: 10Gi
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
