--- a/kubernetes/moria/apps/default/radarr/ks.yaml
+++ b/kubernetes/moria/apps/default/radarr/ks.yaml
@@ -25,3 +25,6 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
