--- a/kubernetes/moria/apps/default/recyclarr/ks.yaml
+++ b/kubernetes/moria/apps/default/recyclarr/ks.yaml
@@ -25,3 +25,6 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 1Gi
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
