Disable all remaining apps except for valheim in default namespace to prep for syno-csi

--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -7,20 +7,20 @@ resources:
   - ./namespace.yaml
   # Apps
   - ./bazarr/ks.yaml
-  - ./hoarder/ks.yaml
-  - ./homepage/ks.yaml
+#  - ./hoarder/ks.yaml
+#  - ./homepage/ks.yaml
   - ./kavita/ks.yaml
-  - ./librechat/ks.yaml
-  - ./n8n/ks.yaml
-  - ./ollama/ks.yaml
+#  - ./librechat/ks.yaml
+#  - ./n8n/ks.yaml
+#  - ./ollama/ks.yaml
   - ./overseerr/ks.yaml
-  - ./pgadmin/ks.yaml
+#  - ./pgadmin/ks.yaml
   - ./plex/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   - ./readarr/ks.yaml
 #  - ./recyclarr/ks.yaml
-  - ./redlib/ks.yaml
+#  - ./redlib/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
   - ./tautulli/ks.yaml
