--- a/kubernetes/moria/apps/default/hoarder/ks.yaml
+++ b/kubernetes/moria/apps/default/hoarder/ks.yaml
@@ -22,3 +22,6 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 5Gi
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
