--- a/kubernetes/moria/apps/default/homepage/ks.yaml
+++ b/kubernetes/moria/apps/default/homepage/ks.yaml
@@ -24,3 +24,6 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
