--- a/kubernetes/moria/apps/default/redlib/ks.yaml
+++ b/kubernetes/moria/apps/default/redlib/ks.yaml
@@ -22,3 +22,6 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      VOLSYNC_STORAGECLASS: syno-iscsi-delete
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
