--- a/.taskfiles/VolSync/templates/list.tmpl.yaml
+++ b/.taskfiles/VolSync/templates/list.tmpl.yaml
@@ -20,4 +20,4 @@ spec:
             - snapshots
           envFrom:
             - secretRef:
-                name: "${app}-volsync-minio-secret"
+                name: "${app}-volsync-r2-secret"
