--- a/.taskfiles/VolSync/templates/repair.tmpl.yaml
+++ b/.taskfiles/VolSync/templates/repair.tmpl.yaml
@@ -16,5 +16,5 @@ spec:
           args: ["repair", "index"]
           envFrom:
             - secretRef:
-                name: ${app}-volsync-minio-secret
+                name: ${app}-volsync-r2-secret
           resources: {}
