--- a/.taskfiles/VolSync/templates/replicationdestination.tmpl.yaml
+++ b/.taskfiles/VolSync/templates/replicationdestination.tmpl.yaml
@@ -8,10 +8,10 @@ spec:
   trigger:
     manual: restore-once
   restic:
-    repository: "${app}-volsync-minio"
+    repository: "${app}-volsync-r2"
     destinationPVC: "${claim}"
     copyMethod: Direct
-    storageClassName: ceph-block
+    storageClassName: syno-iscsi-delete
     # storageClassName: ceph-filesystem
     # accessModes: ["ReadWriteMany"]
     # IMPORTANT NOTE:
