yaml wants this as a string

--- a/kubernetes/moria/apps/default/pgadmin/ks.yaml
+++ b/kubernetes/moria/apps/default/pgadmin/ks.yaml
@@ -27,8 +27,8 @@ spec:
     substitute:
       APP: *app
       # pgadmin container requires uid/gid 5050
-      APP_UID: 5050
-      APP_GID: 5050
+      APP_UID: "5050"
+      APP_GID: "5050"
       VOLSYNC_CAPACITY: 2Gi
       VOLSYNC_STORAGECLASS: syno-iscsi-delete
       VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
