--- a/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
@@ -110,6 +110,10 @@ spec:
         existingClaim: valheim
         globalMounts:
           - path: /config
+      config-backup:
+        existingClaim: valheim-config
+        globalMounts:
+          - path: /config.backup
       backups:
         type: nfs
         server: ${SECRET_NFS_SERVER}
