moved valheim to a dedicated pvc so I can unhook  volsync and reprovision on syno csi

--- a/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
@@ -106,14 +106,14 @@ spec:
             secretName: tls.valheim
 
     persistence:
+      # config:
+      #   existingClaim: valheim
+      #   globalMounts:
+      #     - path: /config
       config:
-        existingClaim: valheim
-        globalMounts:
-          - path: /config
-      config-backup:
         existingClaim: valheim-config
         globalMounts:
-          - path: /config.backup
+          - path: /config
       backups:
         type: nfs
         server: ${SECRET_NFS_SERVER}
