bring up volsync on syno-csi for valheim

--- a/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
@@ -106,10 +106,10 @@ spec:
             secretName: tls.valheim
 
     persistence:
-      # config:
-      #   existingClaim: valheim
-      #   globalMounts:
-      #     - path: /config
+      config-new:
+        existingClaim: valheim
+        globalMounts:
+          - path: /config-new
       config:
         existingClaim: valheim-config
         globalMounts:
