--- a/kubernetes/moria/apps/default/valheim/ks.yaml
+++ b/kubernetes/moria/apps/default/valheim/ks.yaml
@@ -27,3 +27,6 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 5Gi
+      VOLSYNC_STORAGECLASS: syno-iscsi-retain
+      VOLSYNC_SNAPSHOTCLASS: syno-iscsi-delete
+      VOLSYNC_CACHE_SNAPSHOTCLASS: syno-iscsi-delete
