I kid of course...how can a volume come up if you don't first include it

--- a/kubernetes/moria/apps/default/valheim/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./configmap.yaml
   - ./helmrelease.yaml
   - ./pvc.yaml
-#  - ../../../../../shared/templates/volsync
+  - ../../../../../shared/templates/volsync
