--- a/kubernetes/moria/apps/default/valheim/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./externalsecret.yaml
   - ./configmap.yaml
   - ./helmrelease.yaml
-  - ./pvc.yaml
+  #- ./pvc.yaml
   - ../../../../../shared/templates/volsync
