--- a/kubernetes/moria/apps/default/sonarr/app/kustomization.yaml
+++ b/kubernetes/moria/apps/default/sonarr/app/kustomization.yaml
@@ -4,9 +4,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./externalsecret.yaml
-#  - ./pvc.yaml
-#  - ./helmrelease.yaml
+  - ./helmrelease.yaml
   #- ../../../../templates/gatus/guarded
+  - ../../../../../shared/templates/volsync
 configMapGenerator:
   - name: sonarr-configmap
     files:
