Replace all the dependencies on rook with dependencies on syno-csi - fix up some namespaces

--- a/kubernetes/moria/apps/default/ollama/ks.yaml
+++ b/kubernetes/moria/apps/default/ollama/ks.yaml
@@ -30,8 +30,10 @@ spec:
       - kind: Secret
         name: flux-volsync-secret
   dependsOn:
+    - name: synology-csi-driver
+      namespace: storage
     - name: volsync
-    - name: rook-ceph-cluster
+      namespace: volsync-system
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -64,8 +66,10 @@ spec:
       - kind: Secret
         name: flux-volsync-secret
   dependsOn:
+    - name: synology-csi-driver
+      namespace: storage
     - name: volsync
-    - name: rook-ceph-cluster
+      namespace: volsync-system
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
