--- a/kubernetes/apps-disabled/lazylibrarian/app/helmrelease.yaml
+++ b/kubernetes/apps-disabled/lazylibrarian/app/helmrelease.yaml
@@ -22,8 +22,8 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
+    - name: synology-csi-driver
+      namespace: storage
     - name: volsync
       namespace: volsync-system
   values:
