--- a/kubernetes/moria/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/sonarr/app/helmrelease.yaml
@@ -23,8 +23,10 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
+    - name: synology-csi-driver
+      namespace: storage
+    - name: volsync
+      namespace: volsync-system
   values:
     controllers:
       sonarr:
