--- a/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
@@ -24,8 +24,8 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
+    - name: synology-csi-driver
+      namespace: storage
     - name: volsync
       namespace: volsync-system
 
