I should quit while I'm ahead...fix namespace snafu (I hope)

--- a/kubernetes/moria/apps/default/bazarr/ks.yaml
+++ b/kubernetes/moria/apps/default/bazarr/ks.yaml
@@ -11,6 +11,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
+    - name: synology-csi-driver
+    - name: volsync
     - name: external-secrets-stores
   path: ./kubernetes/moria/apps/default/bazarr/app
   prune: true
