--- a/kubernetes/moria/apps/default/kavita/ks.yaml
+++ b/kubernetes/moria/apps/default/kavita/ks.yaml
@@ -16,7 +16,9 @@ spec:
     kind: GitRepository
     name: home-kubernetes
   dependsOn:
+    - name: synology-csi-driver
     - name: volsync
+    - name: external-secrets-stores
   wait: true
   interval: 30m
   retryInterval: 1m
