--- a/kubernetes/moria/apps/default/librechat/ks.yaml
+++ b/kubernetes/moria/apps/default/librechat/ks.yaml
@@ -11,9 +11,10 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
+    - name: synology-csi-driver
+    - name: volsync
     - name: external-secrets-stores
     - name: cloudnative-pg
-    - name: volsync
   path: ./kubernetes/moria/apps/default/librechat/app
   prune: true
   sourceRef:
