move prometheus data to iscsi

--- a/kubernetes/moria/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -120,7 +120,7 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: openebs-hostpath
+              storageClassName: syno-iscsi-retain
               resources:
                 requests:
                   storage: 75Gi
