kick unpackrr out for now, don't use it anyway. Allow plex on Intel nodes until I enable srv-iov and allow valheim on amd nodes (not a great solution, but works for now)

--- a/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
@@ -40,7 +40,9 @@ spec:
           reloader.stakater.com/search: "true"
         pod:
           nodeSelector:
-            feature.node.kubernetes.io/cpu-model.id: "116" # AMD Ryzen
+            # feature.node.kubernetes.io/cpu-model.id: "116" # AMD Ryzen
+            feature.node.kubernetes.io/cpu-model.vendor_id: AMD
+            # kubernetes.io/hostname:: "radon"
         containers:
           app:
             image:
