--- a/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
@@ -78,7 +78,8 @@ spec:
 
     defaultPodOptions:
       nodeSelector:
-        intel.feature.node.kubernetes.io/gpu: "true"
+        feature.node.kubernetes.io/cpu-model.vendor_id: Intel
+        # intel.feature.node.kubernetes.io/gpu: "true"
       securityContext:
         runAsUser: 568
         runAsGroup: 568
