reduce some of the memory requests and limits

--- a/kubernetes/moria/apps/default/homepage/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/homepage/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
                 cpu: 15m
                 memory: 200M
               limits:
-                memory: 2G
+                memory: 512M
     service:
       app:
         controller: *app
