--- a/kubernetes/moria/apps/default/n8n/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/n8n/app/helmrelease.yaml
@@ -126,6 +126,6 @@ spec:
     resources:
       requests:
         cpu: 20m
-        memory: 128M
+        memory: 128Mi
       limits:
-        memory: 512M
+        memory: 512Mi
