--- a/kubernetes/moria/apps/default/overseerr/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/overseerr/app/helmrelease.yaml
@@ -61,8 +61,9 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 128Mi
               limits:
-                memory: 2Gi
+                memory: 1Gi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
