--- a/kubernetes/moria/apps/default/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/sabnzbd/app/helmrelease.yaml
@@ -70,8 +70,9 @@ spec:
             resources:
               requests:
                 cpu: 100m
+                memory: 128Mi
               limits:
-                memory: 8Gi
+                memory: 4Gi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
