--- a/kubernetes/moria/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/external-secrets/onepassword-connect/app/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
               requests:
                 cpu: 10m
               limits:
-                memory: 256M
+                memory: 256Mi
           sync:
             image:
               repository: docker.io/1password/connect-sync
